bluec-tests/tests/invalid/types_pointer/static_init1.c
int value = 1;
int *ptr = &value + &value;

int main(void)
{
    return 0;
}
